--- a/week5/full_stack_react/Client/client/src/index.css
+++ b/week5/full_stack_react/Client/client/src/index.css
@@ -18,7 +18,7 @@ body, html {
   border-radius: 1px;
   font-family: 'Star Jedi', arial;
   cursor: crosshair; 
-  color: red;
+  color:gold;
   
   
   
